samples/_failures_safe/1761524704_dd18cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67f783cf.c: In function ‘main’:
./samples/SAFE/__tmp_67f783cf.c:113:5: error: expected declaration or statement at end of input
  113 |     if (input_len == 0) {
      |     ^~
./samples/SAFE/__tmp_67f783cf.c:113:5: error: expected declaration or statement at end of input
